# rust

./: DD.rs  README.md  Rust.odg  VOCABULARY.md  answers.md  checklist.md  howtodo.md  muistilista.md  notes.md  protips.md  skaalat.rs  soinnut.rs  sudokusolver.rs  vocabulary.md
binaries/: README.md
exercises/: DD.rs
skaalat/: README.md
smtpclient/: Cargo.toml  main.rs
soinnut/: README.md
sudokusolver/: Cargo.toml  README.md  app_window.ui  main.rs
sudokusolver/src/: app_window.ui  main.rs
